--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="open-sans-normal">
     <header>
         <nav>
-            <h3 class="Mary-title">Ma<span>r</span>y</h3>
+            <h3 class="title">Ma<span>r</span>y</h3>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Blog</a></li>
             <li><a href=""><button>Hire Me</button></a></li>
