--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <header>
         <nav>
             <h3 class="title">Ma<span class="textprimari">r</span>y</h3>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Blog</a></li>
+            <ul>
+            <li><a class="dark-2" href="">Portfolio</a></li>
+            <li><a class="dark-2" href="">Blog</a></li>
             <li><a href=""><button>Hire Me</button></a></li>
+            </ul>
         </nav>
     </header>
     <main>
