--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
             <li><a href=""><butto class="btn-primary">Hire Me</button></a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-cotent">
+                <h3>Hi, I  am</h3>
+                <h1>Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button>Download CV</button>
+                <button>Contact</button>
+            </div>
+            <img src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
