--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="header">
         <nav>
             <h3 class="title">Ma<span class="textprimari">r</span>y</h3>
             <ul>
@@ -20,14 +20,14 @@
             </ul>
         </nav>
         <div class="banner">
-            <div class="banner-cotent">
-                <h3>Hi, I  am</h3>
-                <h1>Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button>Download CV</button>
-                <button>Contact</button>
+            <div class="banner-content">
+                <h3 class="banner-greeting dark-2">Hi, I  am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
             </div>
-            <img src="images/hardy.png" alt="">
+            <img class="banner-pic" src="images/hardy.png" alt="">
         </div>
     </header>
     <main>
