--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                 
             </div>
         </section>
+        <section class="about secondary-bg">
+            <h2 class="section-title">What I do</h2>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        </section>
     </main>
     <footer>
 
