--- a/index.html
+++ b/index.html
@@ -55,9 +55,33 @@
                 
             </div>
         </section>
-        <section class="about secondary-bg">
+        <section class="about secondary-bg skill">
             <h2 class="section-title">What I do</h2>
             <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <div class="skills-container">
+                <!-- .skills*4>img+.skill-title+p.skill-description -->
+                <div class="skills">
+                    <img src="images/icons/js.png" alt="">
+                    <div class="skill-title">Vanilla JavaScript</div>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/react.png" alt="">
+                    <div class="skill-title">React</div>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <div class="skill-title">Node.js</div>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/mongo.png" alt="">
+                    <div class="skill-title">MongoDB</div>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
