--- a/index.html
+++ b/index.html
@@ -83,6 +83,51 @@
                 </div>
             </div>
         </section>
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+                <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title"></h4>
+                        <h5 class="experience-sub-title"></h5>
+                        <div class="experience-description"></div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title"></h4>
+                        <h5 class="experience-sub-title"></h5>
+                        <div class="experience-description"></div>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title"></h3>
+                    <div class="experience">
+                        <h4 class="experience-title"></h4>
+                        <h5 class="experience-sub-title"></h5>
+                        <div class="experience-description"></div>
+                    </div>
+                    <div class="experience">
+                        <h4 class="experience-title"></h4>
+                        <h5 class="experience-sub-title"></h5>
+                        <div class="experience-description"></div>
+                    </div>
+                    <div class="experience">
+                        <h4 class="experience-title"></h4>
+                        <h5 class="experience-sub-title"></h5>
+                        <div class="experience-description"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
