--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </section>
-        <section class="resume">
+        <section class="resume secondary-bg">
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="resume-container">
                 <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
@@ -104,15 +104,14 @@
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4 class="experience-List skill/technologies here. You can change the icon above 
-                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.">Master in Computer Engineering</h4>
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
                         <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
                         <div class="experience-description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
                     </div>
                 </div>
                 <div class="resume-column">
-                    <h3 class=" ">My Experience</h3>
+                    <h3 class="resume-column-title">My Experience</h3>
                     <div class="experience">
                         <h4 class="experience-title">Sr. Font End Developer</h4>
                         <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
@@ -135,8 +134,8 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <button class="btn-primary"></button>
+            <div class="resume-download-button">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
     </main>
