footer file creat

--- a/index.html
+++ b/index.html
@@ -140,7 +140,12 @@
         </section>
     </main>
     <footer>
-
+        <section class="footer-title">
+            <div class="footer-subtitle">
+                <h1 class="footer-heading">Lets Connect</h1>
+                <p class="footer-peragraph">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
