--- a/index.html
+++ b/index.html
@@ -140,10 +140,22 @@
         </section>
     </main>
     <footer>
-        <section class="footer-title">
+        <section class="footer-title secondary-bg">
             <div class="footer-subtitle">
                 <h1 class="footer-heading">Lets Connect</h1>
                 <p class="footer-peragraph">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+            <div class="footer-subtitle">
+                <h1 class="footer-heading">Let's Message me</h1>
+                <Form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your Email">
+                    <textarea name="" id="" rows="20" placeholder="Massage"></textarea>
+                    <input type="submit" value="submit">
+                </Form>
             </div>
         </section>
     </footer>
