--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                 <Form action="">
                     <input type="text" name="" id="" placeholder="Your Name">
                     <input type="email" name="" id="" placeholder="Your Email">
-                    <textarea name="" id="" rows="20" placeholder="Massage"></textarea>
-                    <input type="submit" value="submit">
+                    <textarea name="" id="" rows="30" placeholder="Massage"></textarea>
+                    <input class="btn-primary" type="submit" value="submit">
                 </Form>
             </div>
         </section>
