--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>web developer portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<script src="https://kit.fontawesome.com/5b65538a6d.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/portfolio.css">
 </head>
@@ -24,8 +25,8 @@
                 <h3 class="banner-greeting dark-2">Hi, I  am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"> <i class="fa-regular fa-circle-down"></i> Download CV </button>
+                <button class="btn-primary"> <i class="fa-solid fa-phone"></i> contact </button>
             </div>
             <img class="banner-pic" src="images/hardy.png" alt="">
         </div>
@@ -135,7 +136,7 @@
                 </div>
             </div>
             <div class="resume-download-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"> <i class="fa-regular fa-circle-down"></i> Download CV</button>
             </div>
         </section>
     </main>
