--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header secondary-bg">
+    <header class="header secondary-bg hide">
         <nav>
             <h3 class="title">Ma<span class="textprimari">r</span>y</h3>
             <ul>
@@ -32,7 +32,7 @@
         </div>
     </header>
     <main class="main">
-        <section class="about secondary-bg">
+        <section class="about secondary-bg hide">
             <h1 class="section-title">About Me</h1>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="about-items">
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </section>
-        <section class="resume secondary-bg">
+        <section class="resume secondary-bg hide">
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="resume-container">
                 <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
@@ -141,7 +141,7 @@
         </section>
     </main>
     <footer>
-        <section class="footer-title secondary-bg">
+        <section class="footer-title secondary-bg hide">
             <div class="footer-subtitle">
                 <h1 class="footer-heading">Lets Connect</h1>
                 <p class="footer-peragraph">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
