resume resposive complete

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </section>
-        <section class="resume secondary-bg hide">
+        <section class="resume secondary-bg">
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="resume-container">
                 <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
