--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header secondary-bg hide">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="title">Ma<span class="textprimari">r</span>y</h3>
             <ul>
