--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
             <li><a class="dark-2" href="">Portfolio</a></li>
             <li><a class="dark-2" href="">Blog</a></li>
-            <li><a href=""><butto class="btn-primary">Hire Me</button></a></li>
+            <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
             </ul>
         </nav>
         <div class="banner">
